# Home-Organization-App

./: .gitignore  ANALYTICS.md  ARCHITECTURE.md  AUTHENTICATION-SETUP.md  BATHROOM-BACKGROUND-SETUP.md  CHECK-AND-FIX.md  CHECK-FRONTEND.ps1  CLEAN-GITHUB-EXERCISES.md  CLEANUP-SUMMARY.md  COMMIT-ALL.ps1  CONSOLE-ERRORS-GUIDE.md  DEBUG-AUTH-CORS.md  DEBUG-FRONTEND.md  DEPLOYMENT.md  DOCKER-COMPOSE-GUIDE.md  FIX-500-ERROR.md  FIX-CSS-500-FINAL.md  FIX-CSS-500.md  FIX-INDEX-CSS.md  FIX-LOGIN-PAGE.md  FIX-VITE-500-ERROR.md  FIXES-APPLIED.md  FONTS-EMOJIS-IMPROVEMENTS.md  FRONTEND-FIXES-APPLIED.md  FRONTEND-FIXES.md  GITHUB-RESET-INSTRUCTIONS.md  GITHUB-SETUP-GUIDE.md  GITHUB-UPLOAD-GUIDE.md  HOW-TO-RUN.md  HOW-TO-START-MANUALLY.md  INSTALL-DEPENDENCIES.md  LANDING-PAGE-VERIFICATION.md  Makefile  PORT-CHANGES-SUMMARY.md  PORTS-CONFIG.md  PORTS-SUMMARY.md  PROJECT_STRUCTURE.md  QUICK-START-BACKEND.md  QUICK-START-FRONTEND.md  QUICK-START.md  (+30 more)
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  dependency-scan.yml  docker-publish.yml
backend/: .dockerignore  .pre-commit-config.yaml  AI.md  CHECK-CONSOLE.md  DRAG_DROP.md  Dockerfile  EMAIL.md  GDPR.md  GET_DB_SESSION_FIX.md  GRAPHQL.md  LOGGING.md  ML-DEPLOYMENT.md  MONITORING.md  OWNER_ID_FIX.md  RECURRING_TASKS.md  STATISTICS.md  check-health.ps1  create-env.ps1  docker-compose.monitoring.yml  docker-secrets.example.yml  install-deps.ps1  pyproject.toml  requirements-dev.txt  requirements.txt  run-dev.py  run-migrations.ps1
backend/alembic/: env.py
backend/alembic/versions/: 001_add_notification_subscription_table.py  002_add_position_fields.py  005_add_token_blocklist_table.py
backend/app/: config.py  init.sql  main.py
backend/app/api/: auth.py  categories.py  cookie_middleware.py  dashboard.py  deps.py  deps_audit.py  deps_rate_limit.py  drag_drop.py  email.py  google_calendar.py  logging_middleware.py  middleware.py  ml.py  notifications.py  recurring_tasks.py  rooms.py  security_headers.py  sharing.py  statistics.py  tasks.py  todos.py  ws.py
backend/app/api/routes/: __init__.py  auth.py  celery_tasks.py  google_calendar.py  notifications.py  packages.py  push_notifications.py  push_subscriptions.py  rooms.py  tags.py  tasks.py  todo_lists.py
backend/app/celery_tasks/: google_calendar.py  maintenance.py  notifications.py
backend/app/core/: cache.py  logging.py  metrics.py  security.py  tracing.py  user_db.py  vapid_encryption.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  refresh_token.py  room.py  task.py  token_blocklist.py  user.py  vision_board.py
backend/app/graphql/: types.py
backend/app/models/: __init__.py  notification.py  oauth_account.py  package.py  push_subscription.py  room.py  tag.py  task.py  task_history.py  todo_list.py  user.py
backend/app/schemas/: google_calendar.py  package.py  progress.py  room.py  sharing.py  statistics.py  tag.py  task.py  user.py  vision_board.py
backend/app/services/: __init__.py  ai.py  audit.py  dashboard_daily.py  notification_service.py  permissions.py  progress.py  rate_limiter.py  redis_pubsub.py  statistics.py
backend/app/templates/email/: daily_summary.html
backend/app/utils/: auth.py
backend/app/workers/: celery_app.py  tasks.py
backend/docs/: cookies-security.md  google-oauth-pkce.md  health-checks.md  rate-limiting.md
backend/scripts/: encrypt_vapid_key.py
backend/tests/: conftest.py  test_auth.py  test_notifications.py
docs/: audit-logging.md  dependency-scanning.md  docker.md  observability.md  secrets-management.md  static-analysis.md  vapid-encryption.md
frontend/: .dockerignore  .eslintrc.cjs  .prettierignore  API-CONFIG.md  CALENDAR.md  CHECK-SETUP.md  DARK_MODE.md  Dockerfile  ENV-VARIABLES.md  FIX-AND-START.md  I18N.md  PORTS.md  POSTCSS-CONFIG.md  README-DEV.md  ROUTING.md  START-CLEAN.ps1  TOAST.md  TROUBLESHOOT-VITE.md  cypress.config.ts  docker-entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json  tsconfig.sw.json  vite.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/cypress/: tsconfig.json
frontend/cypress/e2e/: rooms.cy.ts  tasks.cy.ts  user-flow.cy.ts  websocket.cy.ts
frontend/cypress/fixtures/: rooms.json  tasks.json  users.json
frontend/cypress/support/: e2e.ts
frontend/docs/: bundle-analysis.md  critical-css.md  css-grid-fallbacks.md  css-modules.md  cypress.md  dashboard-progress-ux.md  image-optimization.md  protected-route.md  responsive-design.md  simple-theme-provider.md
frontend/public/: google-callback.html  manifest.json
frontend/public/icons/: icon-192x192.png.placeholder
frontend/public/screenshots/: README.md
frontend/scripts/: optimize-images.js  trim-brand-logo.mjs
frontend/src/: App.tsx  Introduction.mdx  api.ts  index.css  main.tsx  vite-env.d.ts
frontend/src/api/: dashboardBootstrap.ts  hooks.ts  index.ts  setup.ts
frontend/src/app/: App.tsx  routes.tsx  types.ts
frontend/src/components/: AppLayout.css  AppLayout.tsx  BeforeAfterTimeline.tsx  CategoriesNavTab.tsx  DashboardCategoryProgress.tsx  DashboardDailyTaskCard.tsx  DashboardWeekBar.tsx  DragDropCategoryList.tsx  DragDropTaskList.tsx  DragDropTodoList.tsx  ErrorBoundary.tsx  GoogleLoginButton.tsx  HouseView.module.css  HouseView.tsx  InteractiveHouseMap.tsx  LanguageSwitcher.tsx  LoadingSpinner.stories.tsx  MLRecommendationModal.tsx  Modal.tsx  NavBar.stories.tsx  NavBar.tsx  OptimizedImage.tsx  PWAPrompt.tsx  PrivacyConsentModal.tsx  ProtectedRoute.tsx  ProtectedRouteAdvanced.tsx  RoomCard.module.css  RoomCard.stories.tsx  RoomCard.tsx  RoomsMenu.tsx  Settings.stories.tsx  Settings.tsx  (+12 more)
helm/: README.md
helm/eli-maor/: Chart.yaml  values-production.yaml
k8s/: celery-deployment.yaml  deployment.yaml  frontend-deployment.yaml  service.yaml
load-tests/: k6-script.js  locustfile.py  requirements.txt  setup_test_users.py
ml-service/: .gitignore  main.py
nginx/: csp.conf  nginx.conf
scripts/: generate-api-client.sh  setup.ps1
secrets/: google_client_secret.txt.example  secret_key.txt.example
vault/policies/: eli-maor-backend.hcl
(+472 files in other folders)
